<resources>
    <string name="app_name">My First App</string>
    <string name="python">Python</string>
    <string name="enviar">Enviar</string>
    <string name="limpiar">Limpiar</string>
    <string name="digite_un_nombre">Digite un nombre...</string>
    <string name="digite_un_apellido">Digite un apellido...</string>
    <string name="genero">Genero</string>
    <string name="nacimiento">Nacimiento</string>
    <string name="lenguaje">Lenguaje:</string>
    <string name="le_gusta_programar">Le gusta programar?</string>
    <string name="s">Sí</string>
    <string name="no">No</string>
    <string name="java">Java</string>
    <string name="js">JS</string>
    <string name="c_c">C/C++</string>
    <string name="go_land">Go Land</string>
    <string name="c">C#</string>
    
    <string-array name="genders">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
</resources>