<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="371dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/digite_un_nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="371dp"
        android:layout_height="42dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/digite_un_apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/genero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <TextView
        android:id="@+id/birthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/nacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <TextView
        android:id="@+id/likesProgramming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/le_gusta_programar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthDate" />

    <TextView
        android:id="@+id/programmingLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/lenguaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/likesProgramming" />

    <CheckBox
        android:id="@+id/checkboxJava"
        android:layout_width="92dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/java"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/programmingLanguages" />

    <CheckBox
        android:id="@+id/checkboxPython"
        android:layout_width="92dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/python"
        app:layout_constraintStart_toEndOf="@+id/checkboxJava"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkboxJS"
        android:layout_width="92dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/js"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxJava" />

    <CheckBox
        android:id="@+id/checkboxGo"
        android:layout_width="92dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/go_land"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/checkboxJS"
        app:layout_constraintTop_toBottomOf="@+id/checkboxPython" />

    <CheckBox
        android:id="@+id/checkboxCCPlusPlus"
        android:layout_width="92dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/c_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxJS" />

    <CheckBox
        android:id="@+id/checkboxCSharp"
        android:layout_width="92dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/checkboxCCPlusPlus"
        app:layout_constraintTop_toBottomOf="@+id/checkboxGo" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="82dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toEndOf="@+id/likesProgramming"
        app:layout_constraintTop_toBottomOf="@+id/lastName">

        <RadioButton
            android:id="@+id/radioButtonYes"
            android:layout_width="80dp"
            android:layout_height="22dp"
            android:text="@string/s" />

        <RadioButton
            android:id="@+id/radioButtonNo"
            android:layout_width="80dp"
            android:layout_height="22dp"
            android:text="@string/no" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="13dp"
        android:hint="Seleccione una fecha"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toEndOf="@+id/birthDate"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="251dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

</androidx.constraintlayout.widget.ConstraintLayout>